# F12-Programacion

./: .gitignore  Busqueda_dos_en_dos.cpp  Dockerfile  Pandas.ipynb  analisis_estrellas_estudiante.ipynb  hola_mundo.cpp  main.tex  puntos extra.ipynb  suma de digiyos
Algoritmos_de_Ordenamiento/: Burbuja.cpp  mergesort.cpp  seleccion.cpp
Examen_Parcial_2_La_venganza/: examen_parcial2_estudiante.ipynb
Parcial_2/: examen_parcial2_estudiante.ipynb
Tareas/: main.fdb_latexmk  main.fls  main.tex  tarea1.tex
Tareas/Practica/: merge_sort.py
Tareas/Tarea 2 Docker/: Dockerfile
Tareas/Tarea_2/: main
Tareas_C++/: contar_vocales.cpp
autograder/: ejercicio1.cpp
cpp/Algoritmo_de_ordenamiento/: Algoritmo_de_ordenamiento.cpp
cpp/ejemplos/: hola_mundo.cpp
ejemplos/latex/: ejemplo2.tex
ejemplos/python/: HojaTrabajo_IntroduccionPython.ipynb  MatplotlibSeaborn.ipynb  Numpy.ipynb  XML_JSON_APIs.ipynb
examen_parcial2/: examen_parcial2_estudiante.html  examen_parcial2_estudiante.ipynb
examenes/parcial2/: examen_parcial2_estudiante.ipynb
plantilla_tareas/: main.tex
practicas/cpp/: ordenamiento.cpp
practicas/practica1/: ordenamiento_de_burbuja.cpp
practicas/práctica2_python/: analisis_estrellas_estudiante.ipynb  pyproject.toml
tarea/: Tarea_1.tex
tarea/Tarea_4_y_5/: Numpy.ipynb  Pandas.ipynb
tareas/: mainTarea1.tex  prueba.tex  tarea1.tex
tareas/.build/: prueba.fdb_latexmk  prueba.fls
tareas/Hoja_Python/: HojaTrabajo_IntroduccionPython.ipynb
tareas/Tarea3/: Busqueda_dos_en_dos.cpp  contar_vocales.cpp  numero_primo.cpp  suma_digitos.cpp
(+42 files in other folders)
