[project]
name = "práctica2-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Mia Zoé Gutiérrez Marroquín",email = "miazoe.gutierrez@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "notebook (>=7.5.5,<8.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
